feat: add data to config file

--- a/debian/odoo.conf
+++ b/debian/odoo.conf
@@ -1,8 +1,8 @@
 [options]
 ; This is the password that allows database operations:
 ; admin_passwd = admin
-db_host = False
-db_port = False
-db_user = odoo
-db_password = False
+db_host = localhost
+db_port = 5432
+db_user = mahmut
+db_password = 11ko25sh
 addons_path = C:\Users\mahmu\OneDrive\Documents\Odoo\odoo\addons
