feat: create module

--- a/debian/odoo.conf
+++ b/debian/odoo.conf
@@ -6,3 +6,4 @@ db_port = 5432
 db_user = mahmut
 db_password = 11ko25sh
 addons_path = C:\Users\mahmu\OneDrive\Documents\Odoo\odoo\addons
+db_name = odoo_to_do
