--- a/odoo.conf
+++ b/odoo.conf
@@ -1,5 +1,5 @@
 [options]
-addons_path = C:\Users\mahmu\OneDrive\Documents\Odoo\odoo\addons
+addons_path = .\custom, .\addons
 admin_passwd = $pbkdf2-sha512$25000$pFQKgRDC2DvnfA8BoNR6Dw$dtFg6e30bNPt5DsRryPzes4k0tJ7PYCK99Z5tx.HpQzNh0.pfNgzGmGWsikk6Dh2RRN9YIIpZDJ3BL.RPM3tBg
 csv_internal_sep = ,
 data_dir = C:\Users\mahmu\AppData\Local\OpenERP S.A\Odoo
